--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
           </li>
         </ul>
         <div class="form__select select" id="select-1">
-          <button class="select__button js-select__button-1" type="button">
+          <button class="select__button select__button-1" type="button">
             No selected element
           </button>
 
@@ -90,6 +90,7 @@
               class="select__input"
               type="radio"
               name="select2"
+              checked
             /><label class="select__label" for="input-6">Active item</label>
           </div>
         </div>
@@ -183,7 +184,7 @@
             <label class="radio-panel__label" for="radio-3">Disabled</label>
           </div>
         </div>
-        <div class="right-box">
+        <div id="right-box" class="right-box">
           <input
             class="form__input"
             type="text"
