подготовил репозиторий перед сдачей

--- a/index.html
+++ b/index.html
@@ -207,7 +207,6 @@
       </form>
     </div>
 
-    <!-- <script src="js/main.min.js"></script> -->
-    <script src="js/main.js" type="module"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
